Implement correct handling of membershipCard + add unit test for membershipCard services